--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,12 +13,14 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^4.0.0-alpha.0",
+    "ethereum-waffle": "^3.1.0",
     "ethereumjs-util": "^7.1.4",
     "mocha": "^9.2.2",
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "solc": "^0.8.13",
+    "truffle": "^5.5.5",
+    "truffle-flattener": "^1.6.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
