--- a/hardhat-contracts/package.json
+++ b/hardhat-contracts/package.json
@@ -7,6 +7,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
@@ -34,5 +35,10 @@
     "ts-node": "^10.1.0",
     "typechain": "^5.1.2",
     "typescript": "^4.5.2"
+  },
+  "scripts": {
+    "build": "yarn compile",
+    "compile": "hardhat compile",
+    "test": "yarn compile && mocha --extension ts --require hardhat/register  --recursive"
   }
 }
